# typespeed

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  config.h  dict.c  dict.h  main.c  word.c  word.h
.github/workflows/: cmake-single-platform.yml
src/: assets.c  assets.h  config.h  dict.c  dict.h  main.c  player_input.c  scene.c  scene.h  typespeed.c  util.c  util.h  word.c  word.h
src/components/: play_button.c  play_button.h  player_input.c  player_input.h  title.c  title.h  word.c  word.h
src/memory/: arena.c  arena.h  slab.c  slab.h
src/scenes/: gameplay.c  gameplay.h  main.c  main.h
test/: test.c
